crates/harness-tui/tests/snapshots/screens__approval_modal_80x24.snap
---
source: crates/harness-tui/tests/screens.rs
expression: "render(&s, 80, 24)"
---
" harness-rs │ anthropic/claude-test │ full-access │ ↑0 ↓0 generating… Esc cancel"
"[sys]                                                                           "
"HarnessRS — Enter envia · Esc cancela geração · Ctrl+C sai                      "
"                                                                                "
"[you]                                                                           "
"clean up                                                                        "
"                                                                                "
"[tool]       ┌ aprovação necessária ─────────────────────────────┐              "
"▶ bash {"comm│tool: bash                                         │              "
"             │                                                   │              "
"             │{  "command": "rm -rf target/"}                    │              "
"             │                                                   │              "
"             │full-access: aprovação interativa obrigatória      │              "
"             │                                                   │              "
"             │[y] aprovar   [a] aprovar+allowlist   [n/Esc] negar│              "
"             └───────────────────────────────────────────────────┘              "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌input (gerando…)──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
