crates/harness-tui/tests/snapshots/screens__empty_chat_80x24.snap
---
source: crates/harness-tui/tests/screens.rs
expression: "render(&s, 80, 24)"
---
" harness-rs │ anthropic/claude-test │ only-flagged │ ↑0 ↓0 Enter envia · Tab tel"
"[sys]                                                                           "
"HarnessRS — Enter envia · Esc cancela geração · Ctrl+C sai                      "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌input─────────────────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
