crates/harness-tui/tests/snapshots/screens__streaming_chat_80x24.snap
---
source: crates/harness-tui/tests/screens.rs
expression: "render(&s, 80, 24)"
---
" harness-rs │ anthropic/claude-test │ only-flagged │ ↑0 ↓0 generating… Esc cance"
"[sys]                                                                           "
"HarnessRS — Enter envia · Esc cancela geração · Ctrl+C sai                      "
"                                                                                "
"[you]                                                                           "
"how do I exit vim?                                                              "
"                                                                                "
"[assistant]                                                                     "
"Press Esc then :q!                                                              "
"                                                                                "
"▌                                                                               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌input (gerando…)──────────────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
